--- a/client/src/app/pages/welcome/welcome.component.html
+++ b/client/src/app/pages/welcome/welcome.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <footer>
-    <small>🚗 Version 1.1.0</small> |
+    <small>Version 1.1.0</small> |
     <a href="#">Privacy</a> |
     <a href="#">Support</a>
   </footer>
