Added vehicle settings and driver management pages

--- a/client/src/app/pages/settings/settings.component.html
+++ b/client/src/app/pages/settings/settings.component.html
@@ -3,5 +3,9 @@
   <ul class="settings-list">
     <!--<li (click)="{same method from component.ts}"> Title </li>-->
     <li (click)="goToProfile()">My Profile</li>
+    <li (click)="goToDriverManagement()">Driver Management</li>
+    <li (click)="goToProfile()">My Profile</li>
+    <li (click)="goToProfile()">My Profile</li>
+
   </ul>
 </div>
