--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-container">
-  <h1>Welcome Back</h1>
+  <h1>Welcome Back /h1>
   <p class="subtitle">What would you like to do today?</p>
 
   <div class="button-group">
